--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Kristine Legaspi</title>
+		<title>Jehd Castro</title>
 		<!-- link to main stylesheet -->
         <link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -16,7 +16,7 @@
                 <a href="https://www.linkedin.com/in/kristine-legaspi">LinkedIn</a> 
                 </center><p></div>
 			<!-- /.blurb -->
-			<h2><center>Professional Summary</center></h2>
+			<font size="18"><center>Professional Summary</center></font>
             Graduate from an AACSB accredited university seeking opportunities to further develop professional skills with a
 strong desire to learn and grow. Maintained strong leadership and team roles through previous work experience and
 business-related course work. Achieved academic success through organization, diligent planning, and punctuality. 
