--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ Writing & Communication<br>
 - Proficient in Microsoft Office, specifically Word, PowerPoint, and Excel through numerous papers, presentations, and spreadsheets<br>
 - Online typing test results: 70 wpm<br>
 			
-			<h2>Experience</h2>
+			<h2><center>Experience</center></h2>
 			
 			<b>Accounting Assistant</b>, Part-Time, August 2018 – November 2018<br>
 <i>Accurate Accounting</i> – Menifee, CA<br>
