--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <a href="https://www.linkedin.com/in/kristine-legaspi">LinkedIn</a> 
                 </center><p></div>
 			<!-- /.blurb -->
-			<font size="12"><center>Professional Summary</center></font>
+			<h2><center>Professional Summary</center></h2>
             Graduate from an AACSB accredited university seeking opportunities to further develop professional skills with a
 strong desire to learn and grow. Maintained strong leadership and team roles through previous work experience and
 business-related course work. Achieved academic success through organization, diligent planning, and punctuality. 
